--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
-  "name": "QuizMeBE",
+  "name": "quizmebe",
   "version": "1.0.0",
   "main": "build/index.js",
   "repository": "https://github.com/team-404-hcmus/QuizMeBE.git",
   "author": "NguyenVux <rockmanx000@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start-dev": "tsc && concurrently \"tsc -w\" \"nodemon .\" "
+  },
+  "devDependencies": {
+    "@types/express": "4.16.1",
+    "@types/node": "^17.0.1",
+    "concurrently": "^6.5.1",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongodb": "^4.2.2"
+  }
 }
