--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^17.0.1",
     "concurrently": "^6.5.1",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
