--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "NguyenVux <rockmanx000@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start-dev": "tsc && concurrently \"tsc -w\" \"nodemon .\" "
+    "start-dev": "tsc && concurrently \"tsc -w\" \"nodemon .\" ",
+    "start": "node ."
   },
   "devDependencies": {
     "@types/express": "4.16.1",
